--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,17 @@
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.9.0",
-    "fastify": "^4.12.0"
+    "fastify": "^4.12.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "prisma": "^4.9.0",
